# jobo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: email_samples.json
db/: database.py  models.py
docs/: job_automation_prd.md  module1_overview.md  module2_implementation.md  module3_overview.md  pointers.md
jobo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
module1/: collector.py  parser.py  runner.py  store.py
module2/: __init__.py  enrichment_schema.py  linkedin_fetch.py  ollama_client.py  persist.py  query.py  runner.py
module3/: __init__.py  constants.py  context_loader.py  gemini_client.py  job_bundle.py  pdf.py  persist.py  prompts.py  query.py  runner.py  schema.py
module3/context/: profile.example.md  profile.md
module3/templates/: resume.tex
